mais implementacoes
